style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.container{
  max-width: 1240px;
  padding-left: 24px;
  padding-right: 24px;
}

body{
font-family: 'Darker Grotesque', sans-serif;
background: #000;
  overflow-x: hidden;
}

img{
  max-width: 100%;
  display: block;
}

a{
  text-decoration: none;
}

ul{
  list-style: none;
}

/* navbar */

header{
  background-image: url("assets/images/hero-bg.png");
  background-size: contain;
  background-position: right;
  background-repeat: no-repeat;

  overflow: hidden;
}

.custom-navbar{
  padding: 20px 0;
}

.logo{
  width: 100px;
}

.navbar-nav{
  padding: 0 10px;
}

.nav-link{
  color: #fff;
  font-size: 22px;
  font-weight: 400;
  transition: 0.3s;
}

.nav-link:hover{
  color: #8b5cf6;
}

.contact-btn{
  background: #4E2FFF;
  color: #fff;
  padding: 6px 24px;
  border-radius: 46px;
  font-size: 22px;
  transition: 0.3s;
}

.contact-btn:hover{
  background: #694dff;
  color: #fff;
}

.navbar-toggler{
  border: none;
  box-shadow: none;
}

.navbar-toggler:focus{
  box-shadow: none;
}

/* hero */

.hero-section{
  padding: 70px 0 90px;
}

.hero-image{
  position: relative;

  width: 100%;
  height: 560px;
  margin-top: -40px;
}

.hero-card{
  position: absolute;
  will-change: transform;
  transition: all 0.8s ease;
}

.hero-card img{
  width: 100%;
  height: 100%;

  display: block;
  
}

/* stat 1 */

.card-1{
  width: 398px;
  height: 218px;

  top: 20px;
  right: 0;

  z-index: 1;
}

/* stat 2 */

.card-2{
  width: 275px;
  height: 275px;

  top: 76px;
  left: 40px;

  z-index: 3;
}

/* stat 3 */

.card-3{
  width: 400px;
  height: 185px;

  top: 249px;
  right: 40px;

  z-index: 2;
}

.hero-card.front{
  z-index: 5;

  transform: scale(1.03);
}

.hero-content h1{
  color: #fff;
  font-family: 'Darker Grotesque', sans-serif;
  font-size: 110px;
  font-weight: 700;
  line-height: 110px;
  letter-spacing: -1px;
  margin-bottom: 24px;
  max-width: 700px;
}

.hero-content p{
  color: #bdbdbd;
  font-size: 24px;
  font-weight: 400;
  line-height: 32px;
  max-width: 500px;
  margin-bottom: 40px;
}

.hero-texts{
  min-height: 550px;
}

.hero-content{
  position: relative;
}

.hero-stats{
  position: absolute;

  left: 0;
  bottom: 0;
}

.hero-texts h1,
.hero-texts p{
  transition: 0.5s ease;
}

.hero-fade{
  opacity: 0;
  transform: translateY(20px);
}

#changingWord{
  display: inline;

  transition:
    opacity 0.5s ease,
    transform 0.5s ease;
}

.word-fade{
  opacity: 0;

  transform: translateY(12px);
}

.hero-stats{
  display: flex;
  gap: 36px;
  flex-wrap: wrap;
  max-width: 516px;
}

.stat-box{
  white-space: nowrap;
}

.stat-top{
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 4px;
}

.stat-top h3{
  color: #fff;
  font-size: 35px;
  font-weight: 600;
  line-height: 48px;
  margin: 0;
}

.stat-top img{
  width: 18px;
}

.stat-box span{
  color: #d1d1d1;
  font-size: 24px;
  font-weight: 400;
  line-height: 34px;
}

.hero-image img{
  width: 100%;
}


/* clients */

.clients-section{
  background: #F2F6F8;
  padding: 70px 0 250px;
}

.clients-content{
  text-align: center;
}

.clients-content h2{
  font-size: 52px;
  font-weight: 700;
  color: #111;
  margin-bottom: 40px;
}

.client-logos{
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;

  gap: 54px;

  margin-top: 40px;
}

.client-logos img{
  height: 40px;
  width: 150px;

  object-fit: contain;

  opacity: 0.7;
  transition: 0.3s;
}

.client-logos img:hover{
  opacity: 1;
}

@media(max-width:576px){

  .client-logos{
    gap: 28px;
  }

  .client-logos img{
    height: 22px;
  }

}

/* features */

.features-section{
  background: #4E2FFF;
  padding-top: 220px;
  padding-bottom: 80px;
  position: relative;
}

.features-wrapper{
  position: relative;
}

.top-features{
  margin-top: -340px;
  position: relative;
  z-index: 2;
  row-gap: 30px;
}
.top-features .col-lg-4{
  display: flex;
  justify-content: center;
}

.feature-card{
  background: #FFFFFF;
  border-radius: 20px;
  padding: 78px 20px 30px;
  position: relative;

  width: 370px;
  height: 390px;

  margin: 0 auto;
}

.feature-number{
  position: absolute;
  top: -12px;
  right: 18px;

  font-size: 90px;
  font-weight: 700;
  color: #e2e2e2;
}

.feature-card h3{
  color: #111;
  font-size: 56px;
  font-weight: 600;
  line-height: 1.05;
  margin-bottom: 22px;
}

.feature-card p{
  color: #444;
  font-size: 24px;
  line-height: 34px;
  max-width: 290px;
}

/* lower section */

.features-content{
  padding-top: 40px;
  margin-top: 60px;
}

.features-left h2{
  color: #fff;
  font-size: 90px;
  font-weight: 700;
  line-height: 0.95;
  margin-bottom: 28px;
}

.features-left p{
  color: #d8d8d8;
  font-size: 24px;
  line-height: 34px;
  margin-bottom: 36px;
  max-width: 320px;
}

.learn-btn{
  background: #fff;
  color: #111;
  padding: 14px 34px;
  border-radius: 40px;
  font-size: 22px;
  font-weight: 600;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.features-grid{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  max-width: 760px;
  margin-left: auto;
}

.feature-item{
  padding: 40px 34px;
  position: relative;
}


.feature-item:nth-child(1)::before,
.feature-item:nth-child(3)::before{
  content: "";
  position: absolute;

  top: 51%;
  right: 0;

  width: 1px;
  height: 90%;

  background: rgba(255,255,255,0.3);

  transform: translateY(-50%);
}

.feature-item:nth-child(1)::after,
.feature-item:nth-child(2)::after{
  content: "";
  position: absolute;

  bottom: -1px;
  left: 50%;

  width: 90%;
  height: 1px;

  background: rgba(255,255,255,0.3);

  transform: translateX(-50%);
}

.feature-item img{
  width: 52px;
  margin-bottom: 26px;
}


.feature-item h4{
  color: #fff;
  font-size: 38px;
  font-weight: 600;
  margin-bottom: 16px;
}

.feature-item p{
  color: #d8d8d8;
  font-size: 24px;
  line-height: 34px;
}


/* articles */

.articles-section{
  background: #F2F6F8;
  padding: 60px 0;
}
/* ... */

